# MemoriaDB

./: .clang-format  .gitignore  CMakeLists.txt  README.md
lib/: Database.cpp  Parser.cpp  Printer.cpp  Row.cpp  Schema.cpp  Statement.cpp  StatementExecutor.cpp  StatementReader.cpp  Table.cpp
src/app/: main.cpp
src/memoria/: Database.h  Parser.h  Predicate.h  Printer.h  Row.h  Schema.h  Statement.h  StatementExecutor.h  StatementReader.h  Table.h
tests/: CMakeLists.txt  database_test.cpp  parser_test.cpp  row_test.cpp  schema_test.cpp  statement_executor_test.cpp  statements.sql  table_test.cpp
